# BloomValue

./: .gitignore  Anomaly_Detection.ipynb  Bloom_Anomaly_detection.ipynb  README.md  pyproject.toml
