[tool.poetry]
name = "bloomvalue"
version = "0.1.0"
description = ""
authors = ["Rana Banerjee"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
keras = "^3.4.1"
scikit-learn = "^1.5.1"
shap = "^0.46.0"
ipykernel = "^6.29.5"
tensorflow = "^2.17.0"
matplotlib = "^3.9.1.post1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
